--- a/src/style.css
+++ b/src/style.css
@@ -1,74 +1,44 @@
-:root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-a {
-    text-decoration: inherit;
+html {
+  background-color: #141d28;
 }
 
 body {
-    margin: 0;
-    display: flex;
-    place-items: center;
-    min-width: 320px;
-    min-height: 100vh;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
 }
 
 h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
+  color: #fff;
+  text-align: center;
+  font-weight: 400;
 }
 
-.vite-layout {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+.texto {
+  color: #fff;
+  margin-top: 100px;
+  margin: 0 auto;
+  max-width: 800px;
+  text-align: center;
 }
 
-.logo {
-    height: 6em;
-    padding: 1.5em;
-    will-change: filter;
-    transition: filter 300ms;
-}
-.logo:hover {
-    filter: drop-shadow(0 0 2em #fffa64aa);
-}
-.logo.typescript:hover {
-    filter: drop-shadow(0 0 2em #3178c6aa);
-}
-.logo.rxjs:hover {
-    filter: drop-shadow(0 0 2em #c63176aa);
+.progress-bar {
+  background-color: #9034aa;
+  height: 5px;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 0%;
 }
 
-.read-the-docs {
-    color: #888;
-}
-
-@media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-    a:hover {
-        color: #747bff;
-    }
+button {
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 5px 10px;
 }
